# moe-experiments

./: .gitignore  README.md  inference.py  model.py  moe-analyze.ipynb  moe-transformer.ipynb  prepare_data.py  pyproject.toml  reference_code.ipynb  train.py  utils.py
dataset/: alice_sample_dataset.pt
